--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   bloc: ^8.1.0
+  carousel_slider: ^4.2.1
   conditional_builder_null_safety: ^0.0.6
   cupertino_icons: ^1.0.2
   dio: ^4.0.6
